turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
	for ( i<- 0 to 90 by .1 ) {
                             ^